--- a/locale/ar.po
+++ b/locale/ar.po
@@ -7278,7 +7278,7 @@ msgid "Skip &Forward"
 msgstr "تخطى إلى الأمام"
 
 #: src/effects/Effect.cpp:3061 src/effects/Effect.cpp:3063
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "تخطى إلى الأمام"
 
 #: src/effects/Effect.cpp:3067
@@ -9004,7 +9004,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr " اختر \"شاملة\" لتستخدم الواجهة الشاملة المزودة من النظام."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp:392
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " اختر \"أساسية\" لواجهة نص-فقط أساسية. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp:393 src/effects/lv2/LV2Effect.cpp:238 src/effects/VST/VSTEffect.cpp:794
@@ -9966,7 +9966,7 @@ msgstr "الملف الشخصي:"
 #: src/export/ExportFFmpegDialogs.cpp:1521
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "الملف الشخصي ل AAC\n"
