--- a/locale/cs.po
+++ b/locale/cs.po
@@ -7501,7 +7501,7 @@ msgid "Skip &Forward"
 msgstr "Skočit &vpřed"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Skočit &vpřed"
 
 #: src/effects/Effect.cpp
@@ -9278,7 +9278,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr "Vyberte Obecné, aby se použilo grafické rozhraní poskytované systémem."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr "Vyberte Základní, aby se použilo základní pouze textové rozhraní."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10305,11 +10305,11 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "Profil AAC\n"
-"Nízká složitost (Low Complexity; LC) -default\n"
+"Nízká složitost (Low Complexity; LC) - default\n"
 "Většina přehrávačů přehrává jen LC"
 
 #: src/export/ExportFFmpegDialogs.cpp
