--- a/locale/da.po
+++ b/locale/da.po
@@ -7506,7 +7506,7 @@ msgid "Skip &Forward"
 msgstr "Spring &fremad"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Spring &fremad"
 
 #: src/effects/Effect.cpp
@@ -9291,7 +9291,7 @@ msgstr ""
 " Vælg \"Generisk\" for at bruge systemets supplerende generiske grænseflade."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Vælg \"Enkel\" for en enkel grænseflade, kun med tekst. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10320,7 +10320,7 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC-profil\n"
