--- a/locale/de.po
+++ b/locale/de.po
@@ -7564,7 +7564,7 @@ msgid "Skip &Forward"
 msgstr "&Vorwärts überspringen"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "&Vorwärts überspringen"
 
 #: src/effects/Effect.cpp
@@ -9371,7 +9371,7 @@ msgstr ""
 "Schnittstelle zu benutzen."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Wählen Sie „Einfach“ für eine einfache Text-Schnittstelle. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10414,7 +10414,7 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC-Profil\n"
