--- a/locale/es.po
+++ b/locale/es.po
@@ -7597,7 +7597,7 @@ msgid "Skip &Forward"
 msgstr "Saltar hacia a&delante"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Saltar hacia el p&rincipio"
 
 #: src/effects/Effect.cpp
@@ -9390,7 +9390,7 @@ msgstr ""
 "el sistema."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr "Seleccione \"Básico\" para utilizar un interfaz de texto."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10442,7 +10442,7 @@ msgstr "Perfil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "Perfil AAC\n"
