--- a/locale/fi.po
+++ b/locale/fi.po
@@ -7754,7 +7754,7 @@ msgid "Skip &Forward"
 msgstr "Hyppää &eteenpäin"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Hyppää &eteenpäin"
 
 #: src/effects/Effect.cpp
@@ -9506,7 +9506,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr " Valitse \"Generic\" käytettäessä järjestelmän geneeristä rajapintaa."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Valitse \"Perus\" vain-teksti käyttöliittymässä. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10480,7 +10480,7 @@ msgstr "Profiili:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 
