--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7780,7 +7780,7 @@ msgstr "Saut en avant (&f)"
 #: src/effects/Effect.cpp
 # trebmuh to check (accélérateur - mais celle-ci semble être une typo,
 # voir https://github.com/audacity/audacity/pull/219 )
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Saut en avant (&f)"
 
 #: src/effects/Effect.cpp
@@ -9603,7 +9603,7 @@ msgstr ""
 "le système"
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Sélectionner \"Basique\" pour une interface-texte seulement "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10663,7 +10663,7 @@ msgstr "Profil :"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "Profil AAC\n"
