--- a/locale/hi.po
+++ b/locale/hi.po
@@ -7526,7 +7526,7 @@ msgid "Skip &Forward"
 msgstr "आगे का छोड़ें (&F)"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "आगे का छोड़ें (&F)"
 
 #: src/effects/Effect.cpp
@@ -9309,7 +9309,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr " इकाई में उपलब्ध सामान्य इंटरफेस का प्रयोग करने के लिए  \"सामान्य\" का चयन करें."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " केवल पाठ-आधारित इंटरफेस के लिए  \"सरल\" का चयन करें. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10318,7 +10318,7 @@ msgstr "प्रोफ़ाईल :"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC प्रोफ़ाइल\n"
