--- a/locale/id.po
+++ b/locale/id.po
@@ -7891,7 +7891,7 @@ msgstr "Percepat ke Akhir"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Percepat ke Akhir"
 
 #: src/effects/Effect.cpp
@@ -9799,7 +9799,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10825,7 +10825,7 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "Profil AAC\n"
