--- a/locale/ja.po
+++ b/locale/ja.po
@@ -7810,7 +7810,7 @@ msgid "Skip &Forward"
 msgstr "前方にスキップ(&F)"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "前方にスキップ(&F)"
 
 #: src/effects/Effect.cpp
@@ -9588,7 +9588,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr " システムのインタフェースを使うには \"Generic\" を選んでください."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " テキスト型インタフェ－スにするには \"Basic\" を選んでください. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10623,7 +10623,7 @@ msgstr "プロファイル:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC プロファイル\n"
