--- a/locale/ko.po
+++ b/locale/ko.po
@@ -7466,7 +7466,7 @@ msgid "Skip &Forward"
 msgstr "앞으로 건너뛰기(&F)"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "앞으로 건너뛰기(&F)"
 
 #: src/effects/Effect.cpp
@@ -9233,7 +9233,7 @@ msgstr ""
 " 시스템이 제공하는 일반적인 인터페이스를 사용하려면 \"일반\"을 선택하세요."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " 기본적인 텍스트 전용 인터페이스는 \"기본\"을 선택하세요. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10244,7 +10244,7 @@ msgstr "프로파일:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC 프로파일\n"
