--- a/locale/my.po
+++ b/locale/my.po
@@ -7724,7 +7724,7 @@ msgstr "ရှေ့ဆက်မှုများ"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "ရှေ့ဆက်မှုများ"
 
 #: src/effects/Effect.cpp
@@ -9578,7 +9578,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10593,7 +10593,7 @@ msgstr "ခြုံငုံချက် -"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC ခြုံငုံချက်\n"
