--- a/locale/nl.po
+++ b/locale/nl.po
@@ -7548,7 +7548,7 @@ msgid "Skip &Forward"
 msgstr "Vooruitspoelen"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "&Vooruitspoelen"
 
 #: src/effects/Effect.cpp
@@ -9337,7 +9337,7 @@ msgstr ""
 "het systeem."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr "Selecteer \"basis\" voor een basisinterface met alleen tekst."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10385,7 +10385,7 @@ msgstr "Profiel:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC-profiel\n"
