--- a/locale/pl.po
+++ b/locale/pl.po
@@ -7553,7 +7553,7 @@ msgid "Skip &Forward"
 msgstr "Skocz do &przodu"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Skocz do &początku"
 
 #: src/effects/Effect.cpp
@@ -9338,7 +9338,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr "Wybierz \"Ogólny\", aby użyć systemu dostarczajacego ogólny interfejs."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr "Wybierz \"Podstawowy\" dla podstawowego interfejsu tekstowego."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10374,7 +10374,7 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "Profil AAC\n"
