--- a/locale/pt_PT.po
+++ b/locale/pt_PT.po
@@ -7586,7 +7586,7 @@ msgid "Skip &Forward"
 msgstr "Saltar para a Frente"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Saltar para a Frente"
 
 #: src/effects/Effect.cpp
@@ -9382,7 +9382,7 @@ msgstr ""
 "genérica."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Selecione \"Básico\" para uma interface de apenas texto. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10429,7 +10429,7 @@ msgstr "Perfil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "Perfil AAC \n"
