--- a/locale/sk.po
+++ b/locale/sk.po
@@ -7933,7 +7933,7 @@ msgstr "Vpred"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Vpred"
 
 #: src/effects/Effect.cpp
@@ -9789,7 +9789,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10833,7 +10833,7 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC Profil \n"
