--- a/locale/sl.po
+++ b/locale/sl.po
@@ -7526,7 +7526,7 @@ msgid "Skip &Forward"
 msgstr "Preskoči nap&rej"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Preskoči nap&rej"
 
 #: src/effects/Effect.cpp
@@ -9307,7 +9307,7 @@ msgstr ""
 " Izberite »Splošno«, da uporabite splošni vmesnik, ki ga zagotavlja sistem."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Izberite »Osnovno« za osnovni, zgolj besedilni vmesnik. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10340,7 +10340,7 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "Profil AAC\n"
