--- a/locale/sr_RS.po
+++ b/locale/sr_RS.po
@@ -7711,7 +7711,7 @@ msgid "Skip &Forward"
 msgstr "Премотај на&пред"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Премотај &унапред"
 
 #: src/effects/Effect.cpp
@@ -9491,7 +9491,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr " Изаберите „Опште“ да користите опште сучеље које доставља систем."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Изаберите „Основно“ за текстуално сучеље А основе. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10525,7 +10525,7 @@ msgstr "Профил:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "ААЦ профил\n"
