--- a/locale/sv.po
+++ b/locale/sv.po
@@ -7878,7 +7878,7 @@ msgstr "Framåt"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Framåt"
 
 #: src/effects/Effect.cpp
@@ -9740,7 +9740,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10784,11 +10784,11 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 
 #: src/export/ExportFFmpegDialogs.cpp
