--- a/locale/tr.po
+++ b/locale/tr.po
@@ -7506,7 +7506,7 @@ msgid "Skip &Forward"
 msgstr "İle&riye Atla"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "İle&riye Atla"
 
 #: src/effects/Effect.cpp
@@ -9287,7 +9287,7 @@ msgstr ""
 " Sistem tarafından sağlanan genel arayüzü kullanmak için \"Genel\" seçin."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Basit salt metin arayüzünü kullanmak için \"Temel\" seçin."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10314,7 +10314,7 @@ msgstr "Profil:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "AAC Profili\n"
