--- a/locale/uk.po
+++ b/locale/uk.po
@@ -7573,7 +7573,7 @@ msgid "Skip &Forward"
 msgstr "Перемотати &вперед"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Перемотати &вперед"
 
 #: src/effects/Effect.cpp
@@ -9369,7 +9369,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr " Виберіть «Типовий», щоб скористатися типовим інтерфейсом системи."
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr " Виберіть «Базовий», щоб скористатися базовим текстовим інтерфейсом. "
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10418,7 +10418,7 @@ msgstr "Профіль:"
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 "Профіль AAC\n"
