--- a/locale/vi.po
+++ b/locale/vi.po
@@ -7634,7 +7634,7 @@ msgstr "Tiếp"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Foreward"
+msgid "Skip &Forward"
 msgstr "Tiếp"
 
 #: src/effects/Effect.cpp
@@ -9471,7 +9471,7 @@ msgid " Select \"Generic\" to use the system supplied generic interface."
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp
-msgid " Select \"Basic\" for A basic text-only interface. "
+msgid " Select \"Basic\" for a basic text-only interface. "
 msgstr ""
 
 #: src/effects/audiounits/AudioUnitEffect.cpp src/effects/lv2/LV2Effect.cpp
@@ -10456,7 +10456,7 @@ msgstr ""
 #: src/export/ExportFFmpegDialogs.cpp
 msgid ""
 "AAC Profile\n"
-"Low Complexity -default\n"
+"Low Complexity - default\n"
 "Most players won't play anything other than LC"
 msgstr ""
 
